[package]
name = "beta0_core"
version = "1.0.0"
authors = ["bet_a0 <admin@betA0.net>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# These dependencies
bet_a0 = { path = "../..", default-features = false }
openbrush = {  tag = "4.0.0", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22", "upgradeable", "pausable", "ownable", "access_control"] }
bet_token = { path = "../bet_token", default-features = false, features = ["ink-as-dependency"] }
pandora = { path = "../pandora", default-features = false, features = ["ink-as-dependency"] }
staking = { path = "../staking", default-features = false, features = ["ink-as-dependency"] }
betaz_random = { path = "../betaz_random", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "beta0_core"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "bet_a0/std",
    "openbrush/std",
    "bet_token/std",
    "pandora/std",
    "staking/std",
    "betaz_random/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
overflow-checks = false

[profile.release]
overflow-checks = false
