[package]
name = "wheel_of_fortune"
version = "1.0.0"
authors = ["bet_a0 <admin@betA0.net>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# These dependencies
bet_a0 = { path = "../..", default-features = false }
pandora_psp34_standard = { path = "../pandora_psp34_standard", default-features = false, features = ["ink-as-dependency"] }
openbrush = {  tag = "4.0.0", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp22", "psp34", "upgradeable", "pausable", "ownable", "access_control"] }
dia-randomness-oracle = { path = "../dia-randomness-oracle", default-features = false, features = ["ink-as-dependency"] }
dia-oracle-randomness-getter = { path = "../oracle-randomness-getter", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "wheel_of_fortune"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "bet_a0/std",
    "openbrush/std",
    "dia-randomness-oracle/std",
    "dia-oracle-randomness-getter/std",
    "pandora_psp34_standard/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
overflow-checks = false

[profile.release]
overflow-checks = false
